--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,8 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-
+    --scroll: 0, 0%, 89%;
+    
   }
 
 
@@ -61,6 +62,7 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --scroll:0, 0%, 21%;
   }
 }
 
@@ -95,5 +97,5 @@
 }
 
 ::-webkit-scrollbar-thumb{
-  background-color: hsl(var(--primary));
+  background-color:hsl( var(--scroll));
 }
